<resources>
    <string name="app_name">SimpleToDo</string>
    <string name="delete">Delete</string>
    <string name="edit">EDIT</string>
    <string name="add_as_to_do">TODO</string>
    <string name="search">SEARCH</string>
    <string name="sort_by_name">SORT BY NAME</string>
    <string name="sort_by_date_created">SORT BY DATE CREATED</string>
    <string name="hide_completed_task">HIDE COMPLETED TASKS</string>
    <string name="delete_completed_task">DELETE COMPLETED TASKS</string>
    <string name="confirm_deletion">CONFIRM DELETION</string>
    <string name="yes">YES</string>
    <string name="pin">PIN</string>
    <string name="logout">LOGOUT</string>
    <string name="profile">PROFILE</string>

    <string name="settings">Settings</string>
    <string name="list">NOTES</string>
    <string name="restore">RESTORE</string>
    <string name="delete_all">DELETE ALL</string>
    <string name="add">ADD</string>
    <string name="title">Title</string>
    <string name="apply">APPLY</string>

    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="addTask">New task</string>

    <string name="task_list_appbar_title">Tasks</string>
    <string name="unplanned_tasks_appbar_item">Unplanned tasks</string>
    <string name="scheduled_tasks_appbar_item">Scheduled tasks</string>

    <string name="text_input_hint_add_task">Enter your task description</string>

    <string name="undo_delete_task_description">Task trashed</string>
    <string name="undo_delete_subtask_description">Subtask deleted</string>
    <string name="undo_delete_task_button_text">UNDO</string>

    <string name="content_description_fab_add_task">Add task</string>
    <string name="task_display_appbar_description">Display task</string>
    <string name="search_appbar_description">Search</string>
    <string name="delete_all_tasks_appbar_description">Delete all tasks</string>
    <string name="content_description_appbar_icon_scheduled_task">Scheduled task</string>
    <string name="content_description_appbar_icon_unplanned_task">Scheduled task</string>

    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="in_two_days">In two days</string>
    <string name="next_week">Next week</string>
    <string name="without_date">Without date</string>
    <string name="without_time">Without time</string>
    <string name="on_weekend">On weekend</string>

    <string name="select_time">Select time</string>
    <string name="select_date">Select date</string>

    <string name="cancel">Cancel</string>
    <string name="reschedule">Reschedule</string>

    <string name="menu_task_details_title">Task details</string>

    <string name="menu_note_list_title">Notes</string>

    <string name="vtext">Vertical text</string>

    <string name="all">All</string>
    <string name="undo_delete_note_description">Note trashed</string>

    <string name="without_category">Without category</string>
    <string name="add_category">Add category</string>

    <string name="save">Save</string>

    <string name="manage_categories">Manage categories</string>
    <string name="trash">Trash</string>

    <string name="notes">Notes</string>
    <string name="tasks">Tasks</string>

    <string name="add_sub_task">Add sub-task</string>

    <string name="content_description_fab_add_category">Add category</string>

    <string name="content_description_fab_add_note">Add note</string>

    <string name="sunMoon">SunMoon</string>

    <string name="archive">Archive</string>
    <string name="unarchive">Unarchive</string>
    <string name="completed_tasks">Completed tasks</string>

    <string name="scheduled">Scheduled</string>
    <string name="completed">Completed</string>
    <string name="outdated">Outdated</string>
    <string name="unplanned">Unplanned</string>

    <string name="set_time">Set time</string>

    <string name="green">Green</string>
    <string name="select_theme">Select theme</string>

    <string name="note_title_hint">Enter your note title</string>
    <string name="note_description_hint">Enter your note description</string>

    <string name="category">Category</string>

    <string name="deleteSelectedDay">For selected day</string>

    <string name="deleteAllScheduled">All scheduled</string>


    <string name="set">Set</string>
    <string name="task_scheduled">Task scheduled</string>
    <string name="task_overdue">Overdue by:</string>
    <string name="task_overdue_part_two">days</string>

    <string name="mark_undone">Mark undone</string>
    <string name="schedule">Schedule</string>
    <string name="make_unplanned">Make unplanned</string>

    <string name="input_here">Input here</string>

    <string name="task_deleted">Task deleted</string>

    <string name="task_restored">Task restored</string>

    <string name="note_unarchived">Note unarchived</string>

    <string name="categories">Categories</string>

    <string name="customize">Customize</string>

    <string name="theme">Theme</string>

    <string name="date_time">Date &amp; Time</string>

    <string name="date_format">Date Format</string>

    <string name="time_format">Time Format</string>

    <string name="general">General</string>

    <string name="language">Language</string>

    <string name="yellow">Yellow</string>
    <string name="pink">Pink</string>
    <string name="orange">Orange</string>
    <string name="night">Night</string>

    <string name="choose_delete_options">Choose delete options</string>

    <string name="confirm_delete">Confirm delete</string>

    <string name="sure_delete">Are you sure you want to delete this task?</string>
    <string name="sure_delete_note">Are you sure you want to delete all notes?</string>
    <string name="sure_delete_archive_note">Are you sure you want to delete all archive notes?</string>
    <string name="sure_delete_trashed_note">Are you sure you want to delete all trashed notes?</string>
    <string name="sure_delete_category">Are you sure you want to delete this category?</string>

    <string name="NO">NO</string>


    
    <string name="all_unplanned">All unplanned</string>
    <string name="all_outdated">All outdated</string>
    <string name="all_scheduled_completed">All completed scheduled</string>
    <string name="unplanned_completed">Completed unplanned</string>
    <string name="outdated_completed">Completed outdated</string>
    <string name="scheduled_completed_selcted">Completed for selected day</string>
    <string name="all_trashed">All trashed</string>
    <string name="all_trashed_completed">Completed trashed</string>

    <string name="note_archived">Note archived</string>
    <string name="note_restored">Note restored</string>

    <string name="select_date_format">Select date format</string>

    <string name="restart_required">Restart is require for changes to take effect</string>

    <string name="no_task_in_scheduled">No scheduled tasks</string>
    <string name="no_task_in_unplanned">No unplanned tasks</string>
    <string name="no_task_in_outdated">You have not missed any tasks</string>
    <string name="no_note_in_note">No notes</string>
    <string name="no_note_in_archive">No archive notes</string>
    <string name="no_note_in_trash">You have not delete any notes</string>
    <string name="no_task_in_trash">You have not delete any tasks</string>
    <string name="no_category_in_categories">No categories</string>
    <string name="click_add_to_create">Click + to create your task</string>
    <string name="click_add_to_create_note">Click + to create your note</string>
    <string name="click_add_to_create_category">Click + to create your category</string>

    <string name="trash_need_change">This task is outdated do you want to change date and time for this task?</string>


    <string name="am_pm">12 Hour</string>
    <string name="normal_hour">24 Hour</string>
    <string name="system_default">System default</string>

</resources>